src/styles/settings.sass
@import lib/config.sass
@import lib/nav_bar.sass
@import lib/input_field.sass

.settingscontainer
    display: flex
    flex-direction: column
    align-items: center
    margin-bottom: 2.5em

    h4
        margin-top: 1em

    #budgettxt
        display: inline-block
        font-size: 2.5em
        margin: 0

    #budget
        color: $forground-color
        border: solid $forground-color 1px
        border-radius: 0.2em
        background-color: transparent
        display: inline-block
        font-size: 2.5em
        text-align: right
        width: 35%
        margin-bottom: 0.4em

    #weekly
        display: inline-block

    #monthly
        display: inline-block

    .submitbtn
        width: 50%
        margin: 0.5em

    #currency
        width: 62%
        margin: 0.5em

.setting-field
    text-align: center

.group-header
    display: flex
    align-items: center
    width: 70%
    margin-top: 1em

    h4
        display: inline-block
        flex-grow: 1
    
    i
        font-size: 1.5em
        cursor: pointer

.group-list
    width: 70%
    min-height: 2em
    border: solid $forground-color 1px

    .group
        display: flex
        align-items: center
        margin: 2em

        #name
            flex-grow: 1
        
        #color-preview
            width: 1.5em
            height: 1.5em
            margin-right: 1em
        
        i
            font-size: 1.5em
            cursor: pointer

.add-group
    position: fixed
    width: 100%
    z-index: 1
    display: none

    background-color: $background-color
    border-bottom: solid white 1px

    h1
        width: 100%
        text-align: center

